--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="gbk"/>
     <title>一款精致的按钮</title>
-	<link rel="stylesheet" href="lazyman.css">
+	<link rel="stylesheet/less" href="lazyman.less">
+	<script src="less.js"></script>
 </head>
 <body>
 
@@ -13,7 +14,7 @@
         margin: 40px auto;
     }
     .demo a {
-        margin: 10px;
+        margin: 5px;
     }
 </style>
 
@@ -25,6 +26,8 @@
 	<a class="lm-button lm-purple" href="#"><span>Login</span></a>
 	<a class="lm-button lm-orange" href="#"><span>Login</span></a>
 	<a class="lm-button lm-darkblue" href="#"><span>Login</span></a>
+	<a class="lm-button lm-grassgreen" href="#"><span>Login</span></a>
+	<a class="lm-button lm-rosered" href="#"><span>Login</span></a>
 </div>
 
 </body>
